--- a/platformio.ini
+++ b/platformio.ini
@@ -4,4 +4,4 @@ board = d1_mini
 framework = arduino
 monitor_speed = 115200
 
-lib_deps = ESP Async WebServer
+lib_deps = ESP Async WebServer, marvinroger/AsyncMqttClient@^0.9.0
