Subscribe a vylepšení kódu

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,5 +3,8 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
-
-lib_deps = ESP Async WebServer, knolleary/PubSubClient@^2.8
+#platform_packages = platformio/framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+lib_deps =
+  me-no-dev/ESPAsyncTCP@^1.2.2
+  knolleary/PubSubClient@^2.8
+  me-no-dev/ESP Async WebServer@^1.2.3
