--- a/platformio.ini
+++ b/platformio.ini
@@ -8,3 +8,4 @@ lib_deps =
   me-no-dev/ESPAsyncTCP@^1.2.2
   knolleary/PubSubClient@^2.8
   me-no-dev/ESP Async WebServer@^1.2.3
+  dawidchyrzynski/home-assistant-integration@^2.0.0
